--- a/home.html
+++ b/home.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html>
 <head>
 	<title>Page Title</title>
@@ -557,7 +556,7 @@ Votre Commande a été envoyé, vous allez recevoir une réponse dans quelques i
    </div> 
 	<div style='padding:10px 0px !important;' data-position="fixed" data-role="header">
 	<a href="#left-panel" data-theme="d" data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><img class="imgbt" src="menu.png"></a>
-		<h1 style="font-family: 'Kaushan Script', cursive !important;font-size:23px;padding:0.35em 0 !important;">La Ville Verte</h1>
+		<h1 style="font-family: 'Kaushan Script', cursive !important;font-size:23px;padding:0.35em 0 !important;"></h1>
 			<a href="#lepanier" onclick="affichepanier()" data-transition="none" data-theme="d" data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><div id="countpanier1" class="countpanier">0</div><img class="imgbt" src="buy.png"></a>
 	</div><!-- /header -->
 <!--data-dom-cache="true"-->
@@ -574,7 +573,7 @@ Votre Commande a été envoyé, vous allez recevoir une réponse dans quelques i
 
 	<div  style='padding:10px 0px !important;' data-position="fixed" data-role="header">
 	<a data-transition="none"  href="#page1" data-theme="d"  data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><img class="imgbt" style="vertical-align: middle;width: 24px !important;color: white;margin-top: 7px !important;" src="retour.png"> <span style="font-size: 16px;color: white;vertical-align:-5px;">Retour</span></a>
-	<h1 style="font-family: 'Kaushan Script', cursive !important;font-size:23px;padding:0.35em 0 !important;">La Ville Verte</h1>
+	<h1 style="font-family: 'Kaushan Script', cursive !important;font-size:23px;padding:0.35em 0 !important;"></h1>
 	<a href="#lepanier" onclick="affichepanier()" data-transition="none" data-theme="d" data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><div id="countpanier2" class="countpanier">0</div><img class="imgbt" src="buy.png"></a>
 	
 	</div><!-- /header -->
@@ -590,7 +589,7 @@ Votre Commande a été envoyé, vous allez recevoir une réponse dans quelques i
 
 	<div  style='padding:10px 0px !important;' data-position="fixed" data-role="header">
 		<a data-transition="none"  href="#page1" data-theme="d"  data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><img class="imgbt" style="vertical-align: middle;width: 24px !important;color: white;margin-top: 7px !important;" src="retour.png"> <span style="font-size: 16px;color: white;vertical-align:-5px;">Retour</span></a>
-			<h1 style="font-family: 'Kaushan Script', cursive !important;font-size:23px;padding:0.35em 0 !important;">La Ville Verte</h1>
+			<h1 style="font-family: 'Kaushan Script', cursive !important;font-size:23px;padding:0.35em 0 !important;"></h1>
 	</div><!-- /header -->
 
 	<div id="contentpage3" data-dom-cache="true" data-role="content">
@@ -610,7 +609,7 @@ Votre Commande a été envoyé, vous allez recevoir une réponse dans quelques i
 
 	<div  style='padding:10px 0px !important;' data-position="fixed" data-role="header">
 		<a data-transition="none"  href="#page1" data-theme="d"  data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><img class="imgbt" style="vertical-align: middle;width: 24px !important;color: white;margin-top: 7px !important;" src="retour.png"> <span style="font-size: 16px;color: white;vertical-align:-5px;">Retour</span></a>
-			<h1 style="font-family: 'Kaushan Script', cursive !important;font-size:23px;padding:0.35em 0 !important;">La Ville Verte</h1>
+			<h1 style="font-family: 'Kaushan Script', cursive !important;font-size:23px;padding:0.35em 0 !important;"></h1>
 			<a href="#lepanier" onclick="affichepanier()" data-transition="none" data-theme="d" data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><img class="imgbt" src="buy.png"></a>
 	
 	</div><!-- /header -->
@@ -635,7 +634,7 @@ Les prix figurant dans le site sont des prix TTC en Dh. Nos restaurant partenair
 <div data-role="page" style="background-color:white;" id="apropos">
 	<div  style='padding:10px 0px !important;' data-position="fixed" data-role="header">
 		<a data-transition="none"  href="#page1" data-theme="d"  data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><img class="imgbt" style="vertical-align: middle;width: 24px !important;color: white;margin-top: 7px !important;" src="retour.png"> <span style="font-size: 16px;color: white;vertical-align:-5px;">Retour</span></a>
-			<h1 style="font-family: 'Kaushan Script', cursive !important;font-size:23px;padding:0.35em 0 !important;">La Ville Verte</h1>
+			<h1 style="font-family: 'Kaushan Script', cursive !important;font-size:23px;padding:0.35em 0 !important;"></h1>
 			<a href="#lepanier" onclick="affichepanier()" data-transition="none" data-theme="d" data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><img class="imgbt" src="buy.png"></a>
 	
 	</div><!-- /header -->
@@ -644,7 +643,7 @@ Les prix figurant dans le site sont des prix TTC en Dh. Nos restaurant partenair
 <span style="color:#9cd307;font-weight:bold;">A Propos</span><br/>
 L’idée c’est de vous faciliter la vie, et vous offrir toute sorte de services dont vous avez besoin, au moment où vous le voulez.<br><br>
 
-La ville verte est une application fondée sur les nouvelles technologies, et une intelligence artificielle, qui souhaite améliorer le quotidien des habitants de la ville verte.<br><br>
+ est une application fondée sur les nouvelles technologies, et une intelligence artificielle, qui souhaite améliorer le quotidien des habitants de .<br><br>
 
 Nous avons pensé à votre confort et à vous transformer la façon de vivre et consommer.
 
@@ -652,7 +651,7 @@ Vous avez du mal à trouver quelques heures pour les course ? à emmener votre e
 
 Vous êtes en réunion et vous risquez de ne pas être à l’heure de sortie de l’école de votre enfant ? Pas de souci on est là pour changer les choses, car notre rôle c’est de vous rendre n’importe quel service, vous n’avez qu’à demander.<br><br>
 
-Notre mission est d’être la principale infrastructure de la demande pour toute la ville verte.
+Notre mission est d’être la principale infrastructure de la demande pour toute .
 
 </div><!-- /content -->
 
@@ -662,7 +661,7 @@ Notre mission est d’être la principale infrastructure de la demande pour tout
 <div data-role="page" style="background-color:white;" id="nouveautes">
 	<div  style='padding:10px 0px !important;' data-position="fixed" data-role="header">
 		<a data-transition="none"  href="#page1" data-theme="d"  data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><img class="imgbt" style="vertical-align: middle;width: 24px !important;color: white;margin-top: 7px !important;" src="retour.png"> <span style="font-size: 16px;color: white;vertical-align:-5px;">Retour</span></a>
-			<h1 style="font-family: 'Kaushan Script', cursive !important;font-size:23px;padding:0.35em 0 !important;">La Ville Verte</h1>
+			<h1 style="font-family: 'Kaushan Script', cursive !important;font-size:23px;padding:0.35em 0 !important;"></h1>
 			<a href="#lepanier" onclick="affichepanier()" data-transition="none" data-theme="d" data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><div id="countpanier4" class="countpanier">0</div><img class="imgbt" src="buy.png"></a>
 	
 	</div><!-- /header -->
@@ -682,7 +681,7 @@ Notre mission est d’être la principale infrastructure de la demande pour tout
 <div data-role="page" style="background-color:white;" id="details">
 	<div  style='padding:10px 0px !important;' data-position="fixed" data-role="header">
 		<a data-transition="none"  href="#page1" data-theme="d"  data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><img class="imgbt" style="vertical-align: middle;width: 24px !important;color: white;margin-top: 7px !important;" src="retour.png"> <span style="font-size: 16px;color: white;vertical-align:-5px;">Retour</span></a>
-			<h1 style="font-family: 'Kaushan Script', cursive !important;font-size:23px;padding:0.35em 0 !important;">La Ville Verte</h1>
+			<h1 style="font-family: 'Kaushan Script', cursive !important;font-size:23px;padding:0.35em 0 !important;"></h1>
 			<a href="#lepanier" onclick="affichepanier()" data-transition="none" data-theme="d" data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><div id="countpanier5" class="countpanier">0</div><img class="imgbt" src="buy.png"></a>
 	
 	</div><!-- /header -->
@@ -703,7 +702,7 @@ Notre mission est d’être la principale infrastructure de la demande pour tout
 
 	<div  style='padding:10px 0px !important;' data-position="fixed" data-role="header">
 		<a data-transition="none"  href="#page1" data-theme="d"  data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><img class="imgbt" style="vertical-align: middle;width: 24px !important;color: white;margin-top: 7px !important;" src="retour.png"> <span style="font-size: 16px;color: white;vertical-align:-5px;">Retour</span></a>
-			<h1 style="font-family: 'Kaushan Script', cursive !important;font-size:23px;padding:0.35em 0 !important;">La Ville Verte</h1>
+			<h1 style="font-family: 'Kaushan Script', cursive !important;font-size:23px;padding:0.35em 0 !important;"></h1>
 	</div><!-- /header -->
 
 	<div id="contentpage6" style="text-align:left;font-family:'Exo 2', sans-serif !important" data-dom-cache="true" data-role="content">
@@ -741,7 +740,7 @@ Notre mission est d’être la principale infrastructure de la demande pour tout
 
 	<div  style='padding:10px 0px !important;' data-position="fixed" data-role="header">
 		<a data-transition="none"  href="#page1" data-theme="d"  data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><img class="imgbt" style="vertical-align: middle;width: 24px !important;color: white;margin-top: 7px !important;" src="retour.png"> <span style="font-size: 16px;color: white;vertical-align:-5px;">Retour</span></a>
-			<h1 style="font-family: 'Kaushan Script', cursive !important;font-size:23px;padding:0.35em 0 !important;">La Ville Verte</h1>
+			<h1 style="font-family: 'Kaushan Script', cursive !important;font-size:23px;padding:0.35em 0 !important;"></h1>
 			<a href="#lepanier" onclick="affichepanier()" data-transition="none" data-theme="d" data-iconpos="notext" data-shadow="false" class="hidebg ui-link ui-btn-right ui-btn ui-btn-d ui-corner-all" data-iconshadow="false" data-role="button" role="button"><div id="countpanier3" class="countpanier">0</div><img class="imgbt" src="buy.png"></a>
 	</div><!-- /header -->
 
@@ -758,7 +757,7 @@ Notre mission est d’être la principale infrastructure de la demande pour tout
 
 	<div  style='padding:10px 0px !important;' data-position="fixed" data-role="header">
 		<a data-transition="none"  href="#page1" data-theme="d"  data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><img class="imgbt" style="vertical-align: middle;width: 24px !important;color: white;margin-top: 7px !important;" src="retour.png"> <span style="font-size: 16px;color: white;vertical-align:-5px;">Retour</span></a>
-			<h1 style="font-family: 'Kaushan Script', cursive !important;font-size:23px;padding:0.35em 0 !important;">La Ville Verte</h1>
+			<h1 style="font-family: 'Kaushan Script', cursive !important;font-size:23px;padding:0.35em 0 !important;"></h1>
 			<a href="#lepanier" onclick="affichepanier()" data-transition="none" data-theme="d" data-iconpos="notext" data-shadow="false" class="hidebg ui-link ui-btn-right ui-btn ui-btn-d ui-corner-all" data-iconshadow="false" data-role="button" role="button"><div id="countpanier3" class="countpanier">0</div><img class="imgbt" src="buy.png"></a>
 	</div><!-- /header -->
 
