--- a/home.html
+++ b/home.html
@@ -572,7 +572,7 @@ Votre Commande a été envoyé, vous allez recevoir une réponse dans quelques i
 <div data-role="page" id="page2">
 
 	<div  style='padding:10px 0px !important;' data-position="fixed" data-role="header">
-	<a data-transition="none"  href="#page1" data-theme="d"  data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><img class="imgbt" style="vertical-align: middle;width: 24px !important;color: white;margin-top: 7px !important;" src="retour.png"> <span style="font-size: 16px;color: white;vertical-align:-5px;">Retour</span></a>
+	<a data-transition="none"  href="#page1" data-theme="d"  data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><img class="imgbt" style="vertical-align: middle;width: 24px !important;color: white;margin-top: 7px !important;" src="retour.png"> <span style="font-size: 16px;color: white;vertical-align:-5px;"></span></a>
 	<h1 style="font-family: 'Kaushan Script', cursive !important;font-size:23px;padding:0.35em 0 !important;"></h1>
 	<a href="#lepanier" onclick="affichepanier()" data-transition="none" data-theme="d" data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><div id="countpanier2" class="countpanier">0</div><img class="imgbt" src="buy.png"></a>
 	
@@ -588,7 +588,7 @@ Votre Commande a été envoyé, vous allez recevoir une réponse dans quelques i
 <div data-role="page" style="background-color:white;" id="profil">
 
 	<div  style='padding:10px 0px !important;' data-position="fixed" data-role="header">
-		<a data-transition="none"  href="#page1" data-theme="d"  data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><img class="imgbt" style="vertical-align: middle;width: 24px !important;color: white;margin-top: 7px !important;" src="retour.png"> <span style="font-size: 16px;color: white;vertical-align:-5px;">Retour</span></a>
+		<a data-transition="none"  href="#page1" data-theme="d"  data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><img class="imgbt" style="vertical-align: middle;width: 24px !important;color: white;margin-top: 7px !important;" src="retour.png"> <span style="font-size: 16px;color: white;vertical-align:-5px;"></span></a>
 			<h1 style="font-family: 'Kaushan Script', cursive !important;font-size:23px;padding:0.35em 0 !important;"></h1>
 	</div><!-- /header -->
 
@@ -608,7 +608,7 @@ Votre Commande a été envoyé, vous allez recevoir une réponse dans quelques i
 <div data-role="page" style="background-color:white;" id="condition">
 
 	<div  style='padding:10px 0px !important;' data-position="fixed" data-role="header">
-		<a data-transition="none"  href="#page1" data-theme="d"  data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><img class="imgbt" style="vertical-align: middle;width: 24px !important;color: white;margin-top: 7px !important;" src="retour.png"> <span style="font-size: 16px;color: white;vertical-align:-5px;">Retour</span></a>
+		<a data-transition="none"  href="#page1" data-theme="d"  data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><img class="imgbt" style="vertical-align: middle;width: 24px !important;color: white;margin-top: 7px !important;" src="retour.png"> <span style="font-size: 16px;color: white;vertical-align:-5px;"></span></a>
 			<h1 style="font-family: 'Kaushan Script', cursive !important;font-size:23px;padding:0.35em 0 !important;"></h1>
 			<a href="#lepanier" onclick="affichepanier()" data-transition="none" data-theme="d" data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><img class="imgbt" src="buy.png"></a>
 	
@@ -633,7 +633,7 @@ Les prix figurant dans le site sont des prix TTC en Dh. Nos restaurant partenair
 <!--a propos-->
 <div data-role="page" style="background-color:white;" id="apropos">
 	<div  style='padding:10px 0px !important;' data-position="fixed" data-role="header">
-		<a data-transition="none"  href="#page1" data-theme="d"  data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><img class="imgbt" style="vertical-align: middle;width: 24px !important;color: white;margin-top: 7px !important;" src="retour.png"> <span style="font-size: 16px;color: white;vertical-align:-5px;">Retour</span></a>
+		<a data-transition="none"  href="#page1" data-theme="d"  data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><img class="imgbt" style="vertical-align: middle;width: 24px !important;color: white;margin-top: 7px !important;" src="retour.png"> <span style="font-size: 16px;color: white;vertical-align:-5px;"></span></a>
 			<h1 style="font-family: 'Kaushan Script', cursive !important;font-size:23px;padding:0.35em 0 !important;"></h1>
 			<a href="#lepanier" onclick="affichepanier()" data-transition="none" data-theme="d" data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><img class="imgbt" src="buy.png"></a>
 	
@@ -660,7 +660,7 @@ Notre mission est d’être la principale infrastructure de la demande pour tout
 
 <div data-role="page" style="background-color:white;" id="nouveautes">
 	<div  style='padding:10px 0px !important;' data-position="fixed" data-role="header">
-		<a data-transition="none"  href="#page1" data-theme="d"  data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><img class="imgbt" style="vertical-align: middle;width: 24px !important;color: white;margin-top: 7px !important;" src="retour.png"> <span style="font-size: 16px;color: white;vertical-align:-5px;">Retour</span></a>
+		<a data-transition="none"  href="#page1" data-theme="d"  data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><img class="imgbt" style="vertical-align: middle;width: 24px !important;color: white;margin-top: 7px !important;" src="retour.png"> <span style="font-size: 16px;color: white;vertical-align:-5px;"></span></a>
 			<h1 style="font-family: 'Kaushan Script', cursive !important;font-size:23px;padding:0.35em 0 !important;"></h1>
 			<a href="#lepanier" onclick="affichepanier()" data-transition="none" data-theme="d" data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><div id="countpanier4" class="countpanier">0</div><img class="imgbt" src="buy.png"></a>
 	
@@ -680,7 +680,7 @@ Notre mission est d’être la principale infrastructure de la demande pour tout
 
 <div data-role="page" style="background-color:white;" id="details">
 	<div  style='padding:10px 0px !important;' data-position="fixed" data-role="header">
-		<a data-transition="none"  href="#page1" data-theme="d"  data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><img class="imgbt" style="vertical-align: middle;width: 24px !important;color: white;margin-top: 7px !important;" src="retour.png"> <span style="font-size: 16px;color: white;vertical-align:-5px;">Retour</span></a>
+		<a data-transition="none"  href="#page1" data-theme="d"  data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><img class="imgbt" style="vertical-align: middle;width: 24px !important;color: white;margin-top: 7px !important;" src="retour.png"> <span style="font-size: 16px;color: white;vertical-align:-5px;"></span></a>
 			<h1 style="font-family: 'Kaushan Script', cursive !important;font-size:23px;padding:0.35em 0 !important;"></h1>
 			<a href="#lepanier" onclick="affichepanier()" data-transition="none" data-theme="d" data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><div id="countpanier5" class="countpanier">0</div><img class="imgbt" src="buy.png"></a>
 	
@@ -701,7 +701,7 @@ Notre mission est d’être la principale infrastructure de la demande pour tout
 <div data-role="page" style="background-color:white;" id="Contacteznous">
 
 	<div  style='padding:10px 0px !important;' data-position="fixed" data-role="header">
-		<a data-transition="none"  href="#page1" data-theme="d"  data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><img class="imgbt" style="vertical-align: middle;width: 24px !important;color: white;margin-top: 7px !important;" src="retour.png"> <span style="font-size: 16px;color: white;vertical-align:-5px;">Retour</span></a>
+		<a data-transition="none"  href="#page1" data-theme="d"  data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><img class="imgbt" style="vertical-align: middle;width: 24px !important;color: white;margin-top: 7px !important;" src="retour.png"> <span style="font-size: 16px;color: white;vertical-align:-5px;"></span></a>
 			<h1 style="font-family: 'Kaushan Script', cursive !important;font-size:23px;padding:0.35em 0 !important;"></h1>
 	</div><!-- /header -->
 
@@ -739,7 +739,7 @@ Notre mission est d’être la principale infrastructure de la demande pour tout
 
 
 	<div  style='padding:10px 0px !important;' data-position="fixed" data-role="header">
-		<a data-transition="none"  href="#page1" data-theme="d"  data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><img class="imgbt" style="vertical-align: middle;width: 24px !important;color: white;margin-top: 7px !important;" src="retour.png"> <span style="font-size: 16px;color: white;vertical-align:-5px;">Retour</span></a>
+		<a data-transition="none"  href="#page1" data-theme="d"  data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><img class="imgbt" style="vertical-align: middle;width: 24px !important;color: white;margin-top: 7px !important;" src="retour.png"> <span style="font-size: 16px;color: white;vertical-align:-5px;"></span></a>
 			<h1 style="font-family: 'Kaushan Script', cursive !important;font-size:23px;padding:0.35em 0 !important;"></h1>
 			<a href="#lepanier" onclick="affichepanier()" data-transition="none" data-theme="d" data-iconpos="notext" data-shadow="false" class="hidebg ui-link ui-btn-right ui-btn ui-btn-d ui-corner-all" data-iconshadow="false" data-role="button" role="button"><div id="countpanier3" class="countpanier">0</div><img class="imgbt" src="buy.png"></a>
 	</div><!-- /header -->
@@ -756,7 +756,7 @@ Notre mission est d’être la principale infrastructure de la demande pour tout
 
 
 	<div  style='padding:10px 0px !important;' data-position="fixed" data-role="header">
-		<a data-transition="none"  href="#page1" data-theme="d"  data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><img class="imgbt" style="vertical-align: middle;width: 24px !important;color: white;margin-top: 7px !important;" src="retour.png"> <span style="font-size: 16px;color: white;vertical-align:-5px;">Retour</span></a>
+		<a data-transition="none"  href="#page1" data-theme="d"  data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><img class="imgbt" style="vertical-align: middle;width: 24px !important;color: white;margin-top: 7px !important;" src="retour.png"> <span style="font-size: 16px;color: white;vertical-align:-5px;"></span></a>
 			<h1 style="font-family: 'Kaushan Script', cursive !important;font-size:23px;padding:0.35em 0 !important;"></h1>
 			<a href="#lepanier" onclick="affichepanier()" data-transition="none" data-theme="d" data-iconpos="notext" data-shadow="false" class="hidebg ui-link ui-btn-right ui-btn ui-btn-d ui-corner-all" data-iconshadow="false" data-role="button" role="button"><div id="countpanier3" class="countpanier">0</div><img class="imgbt" src="buy.png"></a>
 	</div><!-- /header -->
