--- a/home.html
+++ b/home.html
@@ -555,9 +555,9 @@ Votre Commande a été envoyé, vous allez recevoir une réponse dans quelques i
 
    </div> 
 	<div style='padding:10px 0px !important;' data-position="fixed" data-role="header">
-	<a href="#left-panel" data-theme="d" data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><div class="imgbt"></div></a>
+	<a href="#left-panel" data-theme="d" data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><img class="imgbt" src="menu.png"></a>
 		<h1 style="font-family: 'Kaushan Script', cursive !important;font-size:23px;padding:0.35em 0 !important;"></h1>
-			<a href="#lepanier" onclick="affichepanier()" data-transition="none" data-theme="d" data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><div id="countpanier1" class="countpanier">0</div><div class="imgbt"></div></a>
+			<a href="#lepanier" onclick="affichepanier()" data-transition="none" data-theme="d" data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><div id="countpanier1" class="countpanier">0</div><img class="imgbt" src="buy.png"></a>
 	</div><!-- /header -->
 <!--data-dom-cache="true"-->
 <div id="reda" data-role="content">
@@ -574,7 +574,7 @@ Votre Commande a été envoyé, vous allez recevoir une réponse dans quelques i
 	<div  style='padding:10px 0px !important;' data-position="fixed" data-role="header">
 	<a data-transition="none"  href="#page1" data-theme="d"  data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><img class="imgbt22" src="retour.png"></a>
 	<h1 style="font-family: 'Kaushan Script', cursive !important;font-size:23px;padding:0.35em 0 !important;"></h1>
-	<a href="#lepanier" onclick="affichepanier()" data-transition="none" data-theme="d" data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><div id="countpanier2" class="countpanier">0</div><div class="imgbt"></div></a>
+	<a href="#lepanier" onclick="affichepanier()" data-transition="none" data-theme="d" data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><div id="countpanier2" class="countpanier">0</div><img class="imgbt" src="buy.png"></a>
 	
 	</div><!-- /header -->
 
@@ -610,7 +610,7 @@ Votre Commande a été envoyé, vous allez recevoir une réponse dans quelques i
 	<div  style='padding:10px 0px !important;' data-position="fixed" data-role="header">
 		<a data-transition="none"  href="#page1" data-theme="d"  data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><img class="imgbt22" src="retour.png"></a>
 			<h1 style="font-family: 'Kaushan Script', cursive !important;font-size:23px;padding:0.35em 0 !important;"></h1>
-			<a href="#lepanier" onclick="affichepanier()" data-transition="none" data-theme="d" data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><div class="imgbt"></div></a>
+			<a href="#lepanier" onclick="affichepanier()" data-transition="none" data-theme="d" data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><img class="imgbt" src="buy.png"></a>
 	
 	</div><!-- /header -->
 
@@ -635,7 +635,7 @@ Les prix figurant dans le site sont des prix TTC en Dh. Nos restaurant partenair
 	<div  style='padding:10px 0px !important;' data-position="fixed" data-role="header">
 		<a data-transition="none"  href="#page1" data-theme="d"  data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><img class="imgbt22" src="retour.png"></a>
 			<h1 style="font-family: 'Kaushan Script', cursive !important;font-size:23px;padding:0.35em 0 !important;"></h1>
-			<a href="#lepanier" onclick="affichepanier()" data-transition="none" data-theme="d" data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><div class="imgbt"></div></a>
+			<a href="#lepanier" onclick="affichepanier()" data-transition="none" data-theme="d" data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><img class="imgbt" src="buy.png"></a>
 	
 	</div><!-- /header -->
 
@@ -662,7 +662,7 @@ Notre mission est d’être la principale infrastructure de la demande pour tout
 	<div  style='padding:10px 0px !important;' data-position="fixed" data-role="header">
 		<a data-transition="none"  href="#page1" data-theme="d"  data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><img class="imgbt22" src="retour.png"></a>
 			<h1 style="font-family: 'Kaushan Script', cursive !important;font-size:23px;padding:0.35em 0 !important;"></h1>
-			<a href="#lepanier" onclick="affichepanier()" data-transition="none" data-theme="d" data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><div id="countpanier4" class="countpanier">0</div><div class="imgbt"></div></a>
+			<a href="#lepanier" onclick="affichepanier()" data-transition="none" data-theme="d" data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><div id="countpanier4" class="countpanier">0</div><img class="imgbt" src="buy.png"></a>
 	
 	</div><!-- /header -->
 <div class="txtpromo" style="font-size:18px;float:left;width:100%;">Nouveautés </div>
@@ -682,7 +682,7 @@ Notre mission est d’être la principale infrastructure de la demande pour tout
 	<div  style='padding:10px 0px !important;' data-position="fixed" data-role="header">
 		<a data-transition="none"  href="#page1" data-theme="d"  data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><img class="imgbt22" src="retour.png"></a>
 			<h1 style="font-family: 'Kaushan Script', cursive !important;font-size:23px;padding:0.35em 0 !important;"></h1>
-			<a href="#lepanier" onclick="affichepanier()" data-transition="none" data-theme="d" data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><div id="countpanier5" class="countpanier">0</div><div class="imgbt"></div></a>
+			<a href="#lepanier" onclick="affichepanier()" data-transition="none" data-theme="d" data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><div id="countpanier5" class="countpanier">0</div><img class="imgbt" src="buy.png"></a>
 	
 	</div><!-- /header -->
 	<div id="contentpage5" data-dom-cache="true" style="padding:0 !important;font-family:'Exo 2', sans-serif;text-align:justify;" data-role="content">
@@ -701,7 +701,7 @@ Notre mission est d’être la principale infrastructure de la demande pour tout
 <div data-role="page" style="background-color:white;" id="Contacteznous">
 
 	<div  style='padding:10px 0px !important;' data-position="fixed" data-role="header">
-		<a data-transition="none"  href="#page1" data-theme="d"  data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><img class="imgbt22" src="retour.png"></a>
+		<a data-transition="none"  href="#page1" data-theme="d"  data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><img class="imgbt22" src="retour.png"> </a>
 			<h1 style="font-family: 'Kaushan Script', cursive !important;font-size:23px;padding:0.35em 0 !important;"></h1>
 	</div><!-- /header -->
 
@@ -731,13 +731,17 @@ Notre mission est d’être la principale infrastructure de la demande pour tout
 </div>
 
 
+
+
+
+
 <div data-role="page" style="background-color:white;" id="lepanier">
 
 
 	<div  style='padding:10px 0px !important;' data-position="fixed" data-role="header">
-		<a data-transition="none"  href="#page1" data-theme="d"  data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><img class="imgbt22" src="retour.png"></a>
+		<a data-transition="none"  href="#page1" data-theme="d"  data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><img class="imgbt" style="vertical-align: middle;width: 24px !important;color: white;margin-top: 7px !important;" src="retour.png"> <span style="font-size: 16px;color: white;vertical-align:-5px;"></span></a>
 			<h1 style="font-family: 'Kaushan Script', cursive !important;font-size:23px;padding:0.35em 0 !important;"></h1>
-			<a href="#lepanier" onclick="affichepanier()" data-transition="none" data-theme="d" data-iconpos="notext" data-shadow="false" class="hidebg ui-link ui-btn-right ui-btn ui-btn-d ui-corner-all" data-iconshadow="false" data-role="button" role="button"><div id="countpanier3" class="countpanier">0</div><div class="imgbt"></div></a>
+			<a href="#lepanier" onclick="affichepanier()" data-transition="none" data-theme="d" data-iconpos="notext" data-shadow="false" class="hidebg ui-link ui-btn-right ui-btn ui-btn-d ui-corner-all" data-iconshadow="false" data-role="button" role="button"><div id="countpanier3" class="countpanier">0</div><img class="imgbt" src="buy.png"></a>
 	</div><!-- /header -->
 
 	<div id="contentpage6" style="text-align:left;padding:0 !important;font-family:'Exo 2', sans-serif !important" data-dom-cache="true" data-role="content">
@@ -752,9 +756,9 @@ Notre mission est d’être la principale infrastructure de la demande pour tout
 
 
 	<div  style='padding:10px 0px !important;' data-position="fixed" data-role="header">
-		<a data-transition="none"  href="#page1" data-theme="d"  data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><img class="imgbt22" src="retour.png"></a>
+		<a data-transition="none"  href="#page1" data-theme="d"  data-iconpos="notext" data-shadow="false" class="hidebg" data-iconshadow="false"><img class="imgbt" style="vertical-align: middle;width: 24px !important;color: white;margin-top: 7px !important;" src="retour.png"> <span style="font-size: 16px;color: white;vertical-align:-5px;"></span></a>
 			<h1 style="font-family: 'Kaushan Script', cursive !important;font-size:23px;padding:0.35em 0 !important;"></h1>
-			<a href="#lepanier" onclick="affichepanier()" data-transition="none" data-theme="d" data-iconpos="notext" data-shadow="false" class="hidebg ui-link ui-btn-right ui-btn ui-btn-d ui-corner-all" data-iconshadow="false" data-role="button" role="button"><div id="countpanier3" class="countpanier">0</div><div class="imgbt"></div></a>
+			<a href="#lepanier" onclick="affichepanier()" data-transition="none" data-theme="d" data-iconpos="notext" data-shadow="false" class="hidebg ui-link ui-btn-right ui-btn ui-btn-d ui-corner-all" data-iconshadow="false" data-role="button" role="button"><div id="countpanier3" class="countpanier">0</div><img class="imgbt" src="buy.png"></a>
 	</div><!-- /header -->
 
 	<div id="listedemescommandes" style="text-align:left;padding:0 !important;font-family:'Exo 2', sans-serif !important" data-dom-cache="true" data-role="content">
